--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
 	"description": "Testing Sprint Challenge",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --watch --verbose",
+		"test": "cross-env DB_ENV=testing jest --watch --verbose",
 		"start": "nodemon index.js"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LambdaSchool/Sprint-Challenge--Testing.git"
-	},
+	"repository": "git+https://github.com/LambdaSchool/Sprint-Challenge--Testing.git",
 	"keywords": [],
 	"author": "Lambda School",
 	"license": "ISC",
@@ -19,10 +16,16 @@
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
-		"express": "^4.16.4"
+		"cross-env": "^5.2.0",
+		"dotenv": "^8.0.0",
+		"express": "^4.16.4",
+		"helmet": "^3.18.0",
+		"knex": "^0.18.1",
+		"sqlite3": "^4.0.9"
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
+		"nodemon": "^1.19.1",
 		"supertest": "^3.3.0"
 	}
 }
